--- a/Sakila.ipynb
+++ b/Sakila.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "ae161f2c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "1ec41120",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "0f6d1fb5",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "452a6eca",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "Engine(mysql+pymysql://root:***@localhost/sakila)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "a30c599d",
    "metadata": {},
    "outputs": [
@@ -128,12 +128,21 @@
        "1  London  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#1. What query would you run to get all the customers inside city_id = 312? \n",
+    "# Your query should return the customers' first name, last name, email, address, and city. \n",
+    "q = \"\"\"\n",
+    "select first_name, last_name, email, address, city from customer as c\n",
+    "join address as a on c.address_id = a.address_id\n",
+    "join city on city.city_id = a.city_id\n",
+    "where a.city_id = 312;\"\"\"\n",
+    "pd.read_sql(q, engine)"
+   ]
   },
   {
    "cell_type": "code",
